--- a/templates/about.html
+++ b/templates/about.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   </head>
   <body>
-    {% include 'navbar.html'}
+    {% include 'navbar.html'%}
 
     <h1>About</h1>
     <p>Speed limits are often touted as a cheap, easy way to stop speeding. Traffic control devices such as stop signs and traffic lights are hailed with creating safer roads. 
