--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -6,18 +6,20 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item active">
-              <a class="nav-link" href="/about.html">About <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="/about">About <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/accidentmap.html">Accident Map</a>
+              <a class="nav-link" href="/accidentmap">Accident Map</a>
             </li>
-            <a class="nav-link dropdown-toggle" href="/templates/#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Dropdown
-            </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="/speedlimits.html">Speed Limits</a>
-              <a class="dropdown-item" href="/trafficcontrols.html">Traffic Controls</a>
-              <a class="dropdown-item" href="/streettype.html">Street Type</a>
+            <div class="dropdown">
+              <button class="nav-link dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Graphs
+              </button>
+              <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                <a class="dropdown-item" href="/speedlimits">Speed Limits</a>
+                <a class="dropdown-item" href="/trafficcontrols">Traffic Controls</a>
+                <a class="dropdown-item" href="/streettype">Street Type</a>
+              </div>
             </div>
 
             </li>
