--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,27 +1,27 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Navbar</a>
+    <a class="navbar-brand" href="#">Data Journalism</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <a class="nav-link active" aria-current="page" href="/">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Features</a>
+          <a class="nav-link" href="/accidentmap">Accident Map</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Pricing</a>
-        </li>
+
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Dropdown link
           </a>
           <ul class="dropdown-menu">
-            {% for graph in data["5/7/19 5:03"] %}
-            <li><a class="dropdown-item" href="/graph/{{graph}}">{{graph}}</a></li>
+            {% for graph in data["5/7/19 5:03"].keys() %}
+              {% if graph != "injuries_total" and graph != "injuries_fatal" and graph != "latitude" and graph != "longitude" %}
+                <li><a class="dropdown-item" href="/graph/{{graph}}">{{graph}}</a></li>
+              {% endif %}
             {% endfor %}
           </ul>
         </li>
