--- a/templates/accidentmap.html
+++ b/templates/accidentmap.html
@@ -9,7 +9,9 @@
   <body>
     {% include 'navbar.html'%}
 <h1>Accident Map</h1>
-{% include 'chicago.svg' %}
+
+  <div><button type="submit">Submit</button></div>
+</form>{% include 'chicago.svg' %}
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
