--- a/templates/accidentmap.html
+++ b/templates/accidentmap.html
@@ -10,8 +10,11 @@
     {% include 'navbar.html'%}
 <h1>Accident Map</h1>
 
-  <div><button type="submit">Submit</button></div>
-</form>{% include 'chicago.svg' %}
+{% include 'chicago.svg' %}
+<h2>Takeaways</h2>
+<p>- The most crashes are centered on two spots on the map, suggesting frequent car use or some structural problem</p>
+<p>- The deadliest crashes occur not sporadically, but on a few roads. Those roads may have a structural issue </p>
+<p>- There are less crashes on the highways than on the streets.</p>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
