--- a/templates/graph.html
+++ b/templates/graph.html
@@ -10,11 +10,14 @@
   <body>
     {% include 'navbar.html'%}
 
-    <h1>{{title}}</h1>
+    <h1>Different {{title}} Accidents out of Total(%)</h1>
+    <h2></h2>
     {% include 'piechart.svg' %}
+    <h2>{{title}} vs. Average Total Injuries</h2>
     {% include 'barchart.svg' %}
 
-
+    <h2>Analysis</h2>
+    <p>The most common {{title}} is {{piechart_vals[0]}}. The most deadly {{title}} on average is {{barchart_data[0][1]}}.</p>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
